--- a/release/index.html
+++ b/release/index.html
@@ -35,6 +35,7 @@
     <script src="bower_components/datetimepicker/dist/DateTimePicker.min.js"></script>
     <script src="/bower_components/taffydb/taffy-min.js"></script>
     <script src="/bower_components/bootstrap/js/affix.js"></script>
+    <script src="/bower_components/cropit/dist/jquery.cropit.js"></script>
 
     <script src="/js/templates.js"></script>
     <script src="/js/superagent.js"></script>
