--- a/src/js/asesor/asesor-visitasi.html
+++ b/src/js/asesor/asesor-visitasi.html
@@ -111,7 +111,11 @@
             <p class="lead">
                 Tambahkan foto dokumentasi pelaksanaan visitasi tim anda.
             </p>
-            <p>Foto dokumentasi yang di upload harus menggambarkan pelaksanaan visitasi selama 2 (dua) hari kerja. </p>
+            <ol>
+                <li>Foto dokumentasi yang di upload harus menggambarkan pelaksanaan visitasi selama 2 (dua) hari kerja.</li>
+                <li>Foto halaman gerbang muka sekolah / madrasah.</li>
+                <li>Foto sarana dan prasarana sekolah / madrasah.</li>
+            </ol>
             <hr />
 
             <div class="alert alert-info"><strong>Heads up.</strong> Jangan lupa melakukan sinkronisasi setelah melakukan upload foto dokumentasi.</div>
