--- a/release/index.html
+++ b/release/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/bower_components/datetimepicker/dist/DateTimePicker.min.css">
     <link rel="stylesheet" href="/vendors/octicons/octicons.css">
     <link rel="stylesheet" href="/css/app.min.css">
+    <link rel="icon" href="/favicon.ico">
+
   </head>
   <body>
 
@@ -38,6 +40,7 @@
     <script src="/bower_components/cropit/dist/jquery.cropit.js"></script>
 
     <script src="/js/templates.js"></script>
+    <script src="/js/offline.min.js"></script>
     <script src="/js/superagent.js"></script>
     <script src="/js/instrumen.js"></script>
     <script src="/js/daerah.js"></script>
