Menambahkan instruksi upload

--- a/src/js/asesor/asesor-visitasi.html
+++ b/src/js/asesor/asesor-visitasi.html
@@ -111,10 +111,12 @@
             <p class="lead">
                 Tambahkan foto dokumentasi pelaksanaan visitasi tim anda.
             </p>
+            <p>Foto dokumentasi yang di upload harus memenuhi ketentuan sebagai berikut : </p> <br />
             <ol>
-                <li>Foto dokumentasi yang di upload harus menggambarkan pelaksanaan visitasi selama 2 (dua) hari kerja.</li>
-                <li>Foto halaman gerbang muka sekolah / madrasah.</li>
-                <li>Foto sarana dan prasarana sekolah / madrasah.</li>
+                <li>menggambarkan pelaksanaan visitasi selama 2 (dua) hari kerja.</li>
+                <li>suasana belajar dan mengajar di sekolah.</li>
+                <li>tampak muka halaman gerbang muka sekolah / madrasah.</li>
+                <li>sarana dan prasarana sekolah / madrasah yang meliputi bangunan, ruang kelas, ruang perpustakaan, ruang laboratorium, ruang pimpinan, ruang guru, ruang tata usaha, ruang konseling, ruang UKS, tempat beribadah, ruang organisasi kesiswaan, jamban, gudang, ruang sirkulasi, tempat berolahraga, tempat bermain.</li>
             </ol>
             <hr />
 
