--- a/src/js/asesor/asesor-base.html
+++ b/src/js/asesor/asesor-base.html
@@ -48,6 +48,9 @@
             </div>
         </div>
 
+        <div class="hide">
+            {{ sekolah.prodi_id = sekolah.prodi.id }}
+        </div>
 
 		<div class="text-danger"><p>{{ sekolah.nama }}</p></div>
         <div>{{ sekolah.prodi.nama }}</div>
@@ -73,9 +76,12 @@
                 </li>
             </ul>
         </div>
-        <a ui-sref="asesor.visitasi({npsn:sekolah.npsn, prodi: sekolah.prodi.id})" class="btn btn-default">
+        <a ng-click="vm.visitasi(sekolah.npsn, sekolah.prodi.id)" class="btn btn-default">
             Mulai visitasi <span class="octicon octicon-repo-force-push"></span>
         </a>
+        <!-- <a ui-sref="asesor.visitasi({npsn:sekolah.npsn, prodi: sekolah.prodi.id})" class="btn btn-default">
+            Mulai visitasi <span class="octicon octicon-repo-force-push"></span>
+        </a> -->
         <!-- <a href="" class="btn btn-primary">Download hasil
             <span class="octicon octicon-desktop-download"></span>
         </a>-->
