--- a/src/js/base/home.html
+++ b/src/js/base/home.html
@@ -19,42 +19,38 @@
 </style>
 
 <div class="container">
+
+    <h1 class="page-header">Sistem Penskoran Akreditasi</h1>
+    <p class="lead">Aplikasi Penskoran dan Pemeringkatan Hasil Akreditasi</p>
+
 	<div class="row">
-        <div class="col-sm-8 col-md-8  col-md-offset-2 col-sm-offset-2">
-        	<h1 class="page-header">Sistem Penskoran Akreditasi</h1>
-			<p class="lead">Aplikasi Penskoran dan Pemeringkatan Hasil Akreditasi</p>
+        <div class="col-sm-6">
+            <p>Instruksi dasar tata cara pengisian instrumen akreditasi online:</p>
+            <ol>
+                <li>Download perangkat akreditasi</li>
+                <li>Paparan </li>
+            </ol>
+        </div>
 
-		    <ul class="list-group">
-		    	<li class="list-group-item">
-		    		<a ui-sref="sekolah">
-		    			<div class="text-danger"><p>Aplikasi Skoring Sekolah</p></div>
-		    			<div class="lead" style="font-size:18px;font-weight:bold;margin:0;">
-		    				<p class="bodytext">Menuju Aplikasi</p>
-		    			</div>
-		    		</a>
-		    	</li>
-		    	<li class="list-group-item">
-		    		<a ui-sref="asesor.home">
-		    			<div class="text-danger"><p>Aplikasi Skoring Tim Asesor</p></div>
-		    			<div class="lead" style="font-size:18px;font-weight:bold;margin:0;">
-		    				<p class="bodytext">Menuju Aplikasi</p>
-		    			</div>
-		    		</a>
-		    	</li>
-		    </ul>
-
-
-            <hr />
-
-            <div class="">
-                Designed and build with love by <a href="https://github.com/purwandi">@purwandi</a>
-
-                <div class="pull-right">
-                    <iframe src="https://ghbtns.com/github-btn.html?user=bapsm&repo=alpha&type=star&count=true" frameborder="0" scrolling="0" width="90px" height="20px"></iframe>
-                    <iframe src="https://ghbtns.com/github-btn.html?user=bapsm&repo=alpha&type=watch&count=true&v=2" frameborder="0" scrolling="0" width="90px" height="20px"></iframe>
-                </div>
-            </div>
-
+        <div class="col-sm-6 col-md-6">
+            <ul class="list-group">
+                <li class="list-group-item">
+                    <a ui-sref="sekolah">
+                        <div class="text-danger"><p>Aplikasi Skoring Sekolah</p></div>
+                        <div class="lead" style="font-size:18px;font-weight:bold;margin:0;">
+                            <p class="bodytext">Menuju Aplikasi</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="list-group-item">
+                    <a ui-sref="asesor.home">
+                        <div class="text-danger"><p>Aplikasi Skoring Tim Asesor</p></div>
+                        <div class="lead" style="font-size:18px;font-weight:bold;margin:0;">
+                            <p class="bodytext">Menuju Aplikasi</p>
+                        </div>
+                    </a>
+                </li>
+            </ul>
         </div>
     </div>
 </div>
