Fix landing pages

--- a/src/js/base/home.html
+++ b/src/js/base/home.html
@@ -25,11 +25,13 @@
 
 	<div class="row">
         <div class="col-sm-6">
-            <p>Instruksi dasar tata cara pengisian instrumen akreditasi online:</p>
-            <ol>
-                <li>Download perangkat akreditasi</li>
-                <li>Paparan </li>
-            </ol>
+            <p>Download dokumen pendukung</p>
+             <ol>
+                <li><a href="http://jakarta.bapsm-dki.or.id/download" target="_blank">Perangkat akreditasi [instrumen akreditasi, petunjuk teknis, instrumen pengumpulan data dan informasi, teknik skoring] file PDF</a></li>
+                <li><a href="http://goo.gl/45zYL7">Instrumen Pengumpulan Data dan Informasi dalam bentuk microsoft word.</a></li>
+                <li><a href="http://media.bapsm-dki.or.id/d6ec64dae59903824810173bbb16b065.ppt" target="_blank">Paparan online pengisian instrumen</a></li>
+                <li><a href="http://media.bapsm-dki.or.id/3cc8df19a9ee48eea1d905ce701d077b.docx">Format Bimbingan.docx</a></li>
+             </ol>
         </div>
 
         <div class="col-sm-6 col-md-6">
