--- a/src/js/asesor/asesor-base.html
+++ b/src/js/asesor/asesor-base.html
@@ -25,6 +25,19 @@
     </tbody>
 </table>
 
+<div class="alert alert-warning">
+    <div class="text-center"><strong>PETUNJUK VISITASI</strong></div>
+    <ol>
+        <li>Setiap sekolah/madrasah yang akan anda kunjungi masing-masing dilengkapi dengan rekapitulasi evaluasi diri dan data pendukung yang telah di isi oleh sekolah.</li>
+        <li>Sebelum datang ke sekolah/madrasah anda diharapkan mempelajari dokumen-dokumen tersebut dengan terlebih dahulu mengunduhnya pada tombol "Unduh Berkas" pada masing-masing sekolah berikut ini.</li>
+        <li>Untuk mempermudah dalam proses visitasi sampaikan berkas informasi data pendukung yang telah anda download dan berikanlah kepada sekolah/madrasah untuk dilakukan kroscek apabila ada perubahan ketika proses visitasi berlangsung.</li>
+        <li>Mintalah bantuan sekolah untuk melakukan penambahan / coret data agar sesuai dengan jawaban visitasi anda.</li>
+        <li>Anda diperbolehkan melakukan klarifikasi dengan pihak sekolah hanya pada data pendukung (instrumen pengumpulan data dan informasi pendukung), sedangkan jawaban dan hasil visitasi harus di rahasiakan dari pihak sekolah. </li>
+        <li>Apabila ada pertanyaan lebih lanjut, hubungi sekretariat BAP-S/M Provinsi DKI Jakarta 021-5253358 (pada jam kantor)</li>
+        <li>Selamat menjalankan tugas!</li>
+    </ol>
+</div>
+
 <div class="list-group" >
 	<div class="list-group-item relax" ng-repeat="sekolah in vm.data.data">
         <div class="pull-right">
