--- a/src/js/asesor/asesor-visitasi.html
+++ b/src/js/asesor/asesor-visitasi.html
@@ -366,7 +366,7 @@
                     <div class="row">
                         <div class="col-md-10">
                             <ol style="padding: 20px;">
-                                <li>Mintalah instrumen pengumpulan data dan informasi pendukung yang telah mengalami perbaikan ketika pelaksanaan visitasi kepada sekolah/madrasah yang bersangkutan. Dokumen yang di minta sudah dalam bentuk PDF.</li>
+                                <li>Mintalah instrumen pengumpulan data dan informasi pendukung yang telah mengalami perbaikan ketika pelaksanaan visitasi kepada sekolah/madrasah yang bersangkutan. Dokumen dalam bentuk doc atau docx.</li>
                                 <li>Untuk mendukung pelaksanaan visitasi yang tim anda lakukan, upload kembali dokumen instrumen pengumpulan data dan informasi pendukung sekolah/madrasah sebagai alat bukti pendukung kondisi real sekolah/madrasah.</li>
                                 <li>Apabila tim anda sudah menerima dokumen instrumen pengumpulan data dan informasi sebagaimana dimaksud point 1 (satu), upload dokumen tersebut dengan mengklik tombol choose file di bawah ini.  </li>
                             </ol>
@@ -379,7 +379,7 @@
                     </div>
 
                     {{ vm.sekolah.prodi.hasil.visitasi.dokumen }}
-                    <upload-file ng-model="vm.sekolah.prodi.hasil.visitasi.dokumen" data-file="docs"></upload-file>
+                    <upload-file ng-model="vm.sekolah.prodi.hasil.visitasi.dokumen" data-file="doc"></upload-file>
                     <small class="help-block">File dalam bentuk pdf, maksimum file 2M</small>
 
                 </div>
